--- a/QtWeatherClient.vcxproj
+++ b/QtWeatherClient.vcxproj
@@ -112,6 +112,9 @@
     <Image Include="picture\background.jpg" />
     <Image Include="picture\background2.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="wsdl文件\WeatherWebService.wsdl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
