--- a/QtWeatherClient.vcxproj
+++ b/QtWeatherClient.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="weatherClient\weatherService.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="README.md" />
     <None Include="weatherClient\WeatherWebServiceSoap.nsmap" />
   </ItemGroup>
   <ItemGroup>
